Added Empty Cart Page

--- a/style.css
+++ b/style.css
@@ -12,3 +12,27 @@
 position: relative;
 top: -47px;
 }
+
+.cart-text{
+    position: relative;
+    top: -30px;
+    left: 30px;
+}
+
+#courses-in-cart{
+    position: relative;
+    top: -20px;
+    left: 30px;
+}
+
+#emptycart{
+    position: relative;
+    top: 120px;
+    left:600px;
+}
+
+#emptytext{
+    position: relative;
+    top: 130px;
+    left: 550px;
+}
